--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						<a href="#" class="sidebar__nav__link">
 							<!-- <i class="mdi mdi-fingerprint"></i> -->
 							<img src="dashboard.png" alt="Home" width="30px" style="margin-left:7px">	
-							<span class="sidebar__nav__text">Dashboard</span>
+							<span class="sidebar__nav__text">Dashboard_m</span>
 						</a>
 					</li>
 					<li>
