--- a/index.html
+++ b/index.html
@@ -16,49 +16,49 @@
 					<li>
 						<a href="#" class="sidebar__nav__link">
 							<!-- <i class="mdi mdi-fingerprint"></i> -->
-							<img src="dashboard.png" alt="Home" width="30px" style="margin-left:7px">	
+							<img src="dashboard.png" alt="Home" style="margin-left:7px">	
 							<span class="sidebar__nav__text">Dashboard</span>
 						</a>
 					</li>
 					<li>
 						<a href="#" class="sidebar__nav__link">
 							<!-- <i class="mdi mdi-credit-card"></i> -->
-							<img src="payment.png" alt="Home" width="30px" style="margin-left:7px">
+							<img src="payment.png" alt="Home" style="margin-left:7px">
 							<span class="sidebar__nav__text">Payment</span>
 						</a>
 					</li>
 					<li>
 						<a href="#" class="sidebar__nav__link">
 							<!-- <i class="mdi mdi-cart"></i> -->
-							<img src="party.png" alt="Home" width="30px" style="margin-left:7px">
+							<img src="party.png" alt="Home" style="margin-left:7px">
 							<span class="sidebar__nav__text">Party</span>
 						</a>
 					</li>
 					<li>
 						<a href="#" class="sidebar__nav__link">
 							<!-- <i class="mdi mdi-account-circle"></i> -->
-							<img src="book.png" alt="Home" width="30px" style="margin-left:7px">
+							<img src="book.png" alt="Home" style="margin-left:7px">
 							<span class="sidebar__nav__text">Expances Type</span>
 						</a>
 					</li>
 					<li>
 						<a href="#" class="sidebar__nav__link">
 							<!-- <i class="mdi mdi-camera"></i> -->
-							<img src="user.png" alt="Home" width="30px" style="margin-left:7px">
+							<img src="user.png" alt="Home" style="margin-left:7px">
 							<span class="sidebar__nav__text">User</span>
 						</a>
 					</li>
 					<li>
 						<a href="#" class="sidebar__nav__link">
 							<!-- <i class="mdi mdi-settings"></i> -->
-							<img src="report.png" alt="Home" width="30px" style="margin-left:7px;">
+							<img src="report.png" alt="Home" style="margin-left:7px;">
 							<span class="sidebar__nav__text">Ledger Report</span>
 						</a>
 					</li>
 					<li>
 						<a href="#" class="sidebar__nav__link">
 							<!-- <i class="mdi mdi-settings"></i> -->
-							<img src="report.png" alt="Home" width="30px" style="margin-left:7px;">
+							<img src="report.png" alt="Home" style="margin-left:7px;">
 							<span class="sidebar__nav__text">Book Report</span>
 						</a>
 					</li>
