--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
 							<span class="sidebar__nav__text">Book Report</span>
 						</a>
 					</li>
+					<li>
+						<a href="#" class="sidebar__nav__link">
+							<!-- <i class="mdi mdi-settings"></i> -->
+							<img src="user_login.png" alt="Home" style="margin-left:7px;">
+							<span class="sidebar__nav__text">User Login</span>
+						</a>
+					</li>
 				</ul>
 			</nav>
 		</aside>
